--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Barbería</title>
 </head>
 
 <body>
+
+    <img src="banner/banner.jpg" alt="Banner barbería">
+    
     <h1>Sobre la Barbería</h1>
 
     <p>Ubicada en el corazón de la ciudad, la <strong>Barbería</strong> trae para el mercado lo que hay de mejor para su
         cabello y barba. Fundada en 2020, la Barbería ya es destaque en la ciudad y conquista nuevos clientes
         diariamente.</p>
 
-    <p><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+    <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
 
     <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo
         de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de
