Create layout of barbershop

--- a/index.html
+++ b/index.html
@@ -11,19 +11,41 @@
 
 <body>
 
-    <img src="banner/banner.jpg" alt="Banner barbería">
-    
-    <h1>Sobre la Barbería</h1>
+<header>
+    <h1 class="titulo-principal">Barbería</h1>
+</header>
 
-    <p>Ubicada en el corazón de la ciudad, la <strong>Barbería</strong> trae para el mercado lo que hay de mejor para su
-        cabello y barba. Fundada en 2020, la Barbería ya es destaque en la ciudad y conquista nuevos clientes
-        diariamente.</p>
+    <img id="banner" src="imagenes/banner.jpg" alt="Banner barbería">
 
-    <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+    <div class="principal">
+        <h2>Sobre la Barbería</h2>
 
-    <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo
-        de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de
-        excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+        <p>Ubicada en el corazón de la ciudad, la <strong>Barbería</strong> trae para el mercado lo que hay de mejor
+            para su
+            cabello y barba. Fundada en 2020, la Barbería ya es destaque en la ciudad y conquista nuevos clientes
+            diariamente.</p>
+
+        <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros
+                    clientes"</strong>.</em></p>
+
+        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el
+            mundo
+            de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de
+            excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+    </div>
+
+    <div class="diferenciales">
+        <h3>Diferenciales</h3>
+        <ul>
+            <li class="items">Atención personalizada a los clientes</li>
+            <li class="items">Espacio diferenciador</li>
+            <li class="items">Localización</li>
+            <li class="items">Profesionales calificados</li>
+        </ul>
+
+        <img id="imagen-diferencial" src="imagenes/diferenciales.jpg" alt="diferenciales">
+    </div>
+
 </body>
 
 </html>
