--- a/productos.html
+++ b/productos.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="productos.css">
+
     <title>Productos - Barbería</title>
 </head>
+
 <body>
     <header>
-        <h1><img src="imagenes/logo.png" alt="logo"></h1>
-        <ul>
-            <li>Home</li>
-            <li>Productos</li>
-            <li>Contacto</li>
-        </ul>
+        <div class="caja">
+            <h1><img src="imagenes/logo.png" alt="logo"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
     </header>
 </body>
+
 </html>
