--- a/productos.html
+++ b/productos.html
@@ -47,6 +47,11 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="imagenes/logo-blanco.png" alt="">
+        <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+    </footer>
 </body>
 
 </html>
