--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style-home.css">
     <title>Barbería</title>
 </head>
 
@@ -14,6 +14,7 @@
 <header>
     <h1 class="titulo-principal">Barbería</h1>
 </header>
+
 
     <img id="banner" src="imagenes/banner.jpg" alt="Banner barbería">
 
